fix note in generated colorschemes

--- a/base16/eeschema_dracula.cfg
+++ b/base16/eeschema_dracula.cfg
@@ -1,6 +1,6 @@
-###################################
-# GENERATED FROM IMAGE WITH PYWAL #
-###################################
+###############################
+# GENERATED FROM PYWAL PRESET #
+###############################
 # pywal:black => rgb(40, 41, 54)
 Color4DBgCanvasEx=rgb(40, 41, 54)
 # pywal:dark_gray => rgb(77, 79, 104)
