--- a/base16/eeschema_nord.cfg
+++ b/base16/eeschema_nord.cfg
@@ -1,6 +1,6 @@
-###################################
-# GENERATED FROM IMAGE WITH PYWAL #
-###################################
+###############################
+# GENERATED FROM PYWAL PRESET #
+###############################
 # pywal:black => rgb(46, 52, 64)
 Color4DBgCanvasEx=rgb(46, 52, 64)
 # pywal:dark_gray => rgb(76, 86, 106)
