--- a/base16/eeschema_oceanicnext.cfg
+++ b/base16/eeschema_oceanicnext.cfg
@@ -1,6 +1,6 @@
-###################################
-# GENERATED FROM IMAGE WITH PYWAL #
-###################################
+###############################
+# GENERATED FROM PYWAL PRESET #
+###############################
 # pywal:black => rgb(27, 43, 52)
 Color4DBgCanvasEx=rgb(27, 43, 52)
 # pywal:dark_gray => rgb(101, 115, 126)
