--- a/base16/eeschema_onedark.cfg
+++ b/base16/eeschema_onedark.cfg
@@ -1,6 +1,6 @@
-###################################
-# GENERATED FROM IMAGE WITH PYWAL #
-###################################
+###############################
+# GENERATED FROM PYWAL PRESET #
+###############################
 # pywal:black => rgb(40, 44, 52)
 Color4DBgCanvasEx=rgb(40, 44, 52)
 # pywal:dark_gray => rgb(84, 88, 98)
