--- a/base16/eeschema_rebecca.cfg
+++ b/base16/eeschema_rebecca.cfg
@@ -1,6 +1,6 @@
-###################################
-# GENERATED FROM IMAGE WITH PYWAL #
-###################################
+###############################
+# GENERATED FROM PYWAL PRESET #
+###############################
 # pywal:black => rgb(41, 42, 68)
 Color4DBgCanvasEx=rgb(41, 42, 68)
 # pywal:dark_gray => rgb(102, 102, 153)
